build: update java 25 configs, openrewrite, and checkstyle fixes